<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">康明智联</string>
    <string name="welcome_word">康明智联</string>
    <string name="login_pls">请登录</string>
    <string name="phone_login">手机号登录</string>
    <string name="unknown">未知</string>
    <string name="no_more">没有更多了</string>
    <string name="anonymous">匿名</string>
    <string name="invalid_device_info">无效设备信息</string>
    <string name="invalid_image_dir">无效图像路径</string>
    <string name="invalid_device_type">无效设备类型</string>
    <string name="cfg_device_basic_info">配置设备基本信息</string>
    <string name="add_device_failure">添加设备失败</string>
    <string name="pause_show">暂停显示</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="ellipsis">…</string>
    <string name="cannot_switch_mode">请在设备已连接时切换模式。</string>
    <string name="switch_mode">切换模式</string>
    <string name="reconnect_after_disconnect">设备将断开重连。</string>
    <string name="pls_stop_record_firstly">请先停止记录。</string>
    <string name="pls_turn_on_ecg_firstly">记录前请先打开心电功能。</string>
    <string name="pls_be_quiet_when_record">记录时请保持安静。</string>
    <string name="device_address">设备地址:</string>
    <string name="device_type">设备类型:</string>
    <string name="device_name">设备名称:</string>
    <string name="device_broadcast_name">设备广播名:</string>
    <string name="device_image">设备图像:</string>
    <string name="added">已添加</string>
    <string name="not_added">未添加</string>
    <string name="hr_monitor_name">心率计</string>
    <string name="thermo_monitor_name">体温计</string>
    <string name="km_temp_humid_monitor_name">康明温湿度计</string>
    <string name="km_eeg_monitor_name">康明脑电仪</string>
    <string name="note">备注:</string>
    <string name="null_content">无</string>
    <string name="record_time">记录时间：</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="start_record">开始记录</string>
    <string name="stop_record">停止记录</string>
    <string name="start_calibration">开始标定</string>
    <string name="calibrating">标定中...</string>
    <string name="recording">记录中</string>
    <string name="temperature_of_body">体温</string>
    <string name="modify_account_info">修改账户信息</string>
    <string name="account_name">用户昵称:</string>
    <string name="account_portrait">用户头像:</string>
    <string name="hr_voice_speech">心率语音播报:</string>
    <string name="enable">开启</string>
    <string name="minute_per_time">分钟/次</string>
    <string name="hr_abnormal_alarm">心率异常报警:</string>
    <string name="low_limit">下限\n次/分钟</string>
    <string name="high_limit">上限\n次/分钟</string>
    <string name="and">和</string>
    <string name="report_title">诊断报告</string>
    <string name="record_note_title">备注</string>


    <string name="current_hr">当前心率</string>
    <string name="hr_too_high">心率过高</string>
    <string name="hr_too_low">心率过低</string>
    <string name="BPM">次/分钟</string>
    <string name="all_type_record">所有记录</string>
    <string name="hr_record">心率记录</string>
    <string name="ecg_record">心电记录</string>
    <string name="thermo_record">体温记录</string>
    <string name="th_record">温湿度记录</string>
    <string name="eeg_record">脑电记录</string>
    <string name="ppg_record">脉搏记录</string>
    <string name="ptt_record">PTT记录</string>
    <string name="bp_calibration">血压标定</string>
    <string name="open_record_failure">打开记录失败</string>
    <string name="save_record_success">记录已保存</string>
    <string name="record_too_short">记录时长太短，未保存</string>
    <string name="record_damage">记录已损坏</string>
    <string name="upload_record_success">记录已上传</string>
    <string name="update_record_success">记录已更新</string>
    <string name="wait_pls">请稍等…</string>
    <string name="operation_failure">出错了</string>
    <string name="web_failure">网络错误</string>
    <string name="operation_success">操作成功</string>
    <string name="login_success">账户登录成功</string>
    <string name="login_failure">账户登录失败</string>
    <string name="max_hr">最大心率:</string>
    <string name="average_hr">平均心率:</string>
    <string name="hr_histogram">心率直方图</string>
    <string name="hr_linechart">心率变化图</string>
    <string name="thermo_linechart">体温变化图</string>
    <string name="time">时间</string>
    <string name="temperature">℃</string>
    <string name="add_device">添加设备</string>
    <string name="delete_device">删除设备</string>
    <string name="wont_delete_info_by_device">删除设备不会丢失设备记录。</string>
    <string name="query_record">浏览记录</string>
    <string name="open_store">康明商城</string>
    <string name="about_km">关于康明</string>
    <string name="exit">退出</string>
    <string name="configure">配置</string>
    <string name="upload">上传</string>
    <string name="scan">扫描</string>
    <string name="closed">已关闭</string>
    <string name="connected">已连接</string>
    <string name="connect_failure">连接失败</string>
    <string name="disconnected">已断开，等待连接</string>
    <string name="connecting">连接中</string>
    <string name="disconnecting">断开中</string>
    <string name="ecg_switch_on">心电模式</string>
    <string name="ecg_switch_off">心率模式</string>
    <string name="second">秒</string>
    <string name="exit_app">退出应用</string>
    <string name="close_device">关闭设备</string>
    <string name="pls_close_device_firstly">请先关闭设备。</string>
    <string name="force_exit">强制退出</string>
    <string name="minimize_app">最小化</string>
    <string name="local_device">本地设备</string>
    <string name="web_device">网络设备</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="restore_default">恢复默认</string>
    <string name="auto_connect_when_open">打开后自动连接</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="delete_record">删除记录</string>
    <string name="really_wanna_delete_record">删除后将无法恢复，确定删除吗？</string>
    <string name="logout_account">退出账户</string>
    <string name="really_logout_account">该账户下未上传记录可能会丢失。确定退出吗？</string>
    <string name="battery">电量</string>
    <string name="refresh_when_drag_down">下拉刷新</string>
    <string name="download">下载</string>
    <string name="search">搜索</string>
    <string name="pls_check_privacy">请勾选同意康明智联服务协议和隐私政策。</string>

    <string name="welcome_text_format">欢迎使用%1$s</string>
    <string name="no_device_opened">当前无设备打开</string>
    <string name="some_devices_opened">有%d设备打开</string>
    <string name="update">更新</string>
    <string name="share">分享</string>
    <string name="record_ecg_signal_failed">无法记录心电信号</string>
    <string name="no_record">无记录</string>
    <string name="hr_limit_wrong">心率上限必须大于下限。</string>
    <string name="title_activity_hrmcfg">配置心率计</string>
    <string name="title_activity_pttcfg">配置PTT</string>
    <string name="scan_failed_already_started">扫描已开始</string>
    <string name="scan_failed_bt_closed">蓝牙已关闭</string>
    <string name="scan_failed_ble_inner_error">蓝牙内部错误</string>
    <string name="invalid_operation">无效操作</string>
    <string name="wait_scan_pls">准备扫描中，请等待</string>
    <string name="device_unbond">设备未绑定</string>
    <drawable name="clr_normal">@color/accent</drawable>
    <drawable name="clr_pressed">@color/red</drawable>
    <string name="privacy_policy">同意康明智联</string>
    <string name="user_agreement"><a href="http://kmic.xyz/useragreement.html">《服务协议》</a></string>
    <string name="privacy_policy_http"><a href="http://kmic.xyz/privacy.html">《隐私政策》</a></string>
</resources>
