<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_address"/>
        <TextView
            android:id="@+id/tv_device_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_type"/>
        <TextView
            android:id="@+id/tv_device_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"/>
        <EditText
            android:id="@+id/et_device_nickname"
            style="@style/edittext_circle_gray_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/device_image"/>
        <com.cmtech.android.bledeviceapp.view.RoundImageView
            android:id="@+id/iv_tab_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_unknown_device"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_device_auto_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/auto_connect_when_open"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel"
            style="@style/button_circle_blue_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/btn_set_default"
            style="@style/button_circle_blue_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/restore_default"/>
        <Button
            android:id="@+id/btn_ok"
            style="@style/button_circle_blue_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ok"/>
    </LinearLayout>


</LinearLayout>
