<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ecg_record_update"
        android:icon="@mipmap/ic_update_32px"
        android:orderInCategory="0"
        android:title= "@string/update"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/ecg_record_delete"
        android:icon="@mipmap/ic_delete_24px"
        android:orderInCategory="1"
        android:title= "@string/delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/ecg_record_share"
        android:icon="@mipmap/ic_share_32px"
        android:orderInCategory="2"
        android:title= "@string/share"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/share_with_wechat"
                android:title="微信"/>
            <item
                android:id="@+id/share_with_qq"
                android:title="QQ"/>
            <item
                android:id="@+id/share_with_email"
                android:title="邮箱"/>
        </menu>
    </item>

</menu>