<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/ib_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:src="@mipmap/ic_start_32px"
        android:background="@color/background_transparent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ib_record"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30秒倒计时"
            android:textSize="@dimen/big_font"/>

        <EditText
            android:id="@+id/et_time_length"
            style="@style/edittext_circle_gray_no_focusable_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ellipsis"
            android:textSize="@dimen/bigger_font"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second"
            android:textSize="@dimen/big_font"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_record_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ib_record"
        android:layout_centerHorizontal="true"
        android:text="@string/start_record"
        android:textSize="@dimen/big_font"/>
</RelativeLayout>