<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <com.cmtech.android.bledeviceapp.view.RoundImageView
            android:id="@+id/iv_tab_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:src="@mipmap/ic_unknown_device"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_device_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:text="@string/unknown"/>

            <TextView
                android:id="@+id/tv_device_macaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/device_address"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_device_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_margin="4dp"
        android:text="@string/closed"
        android:textSize="14sp" />
</LinearLayout>