<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/iv_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="5dp"
        android:src="@mipmap/ic_left_arrow_32px"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/iv_exit"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <com.cmtech.android.bledevice.view.RoundImageView
            android:id="@+id/iv_creator_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_user"/>

        <TextView
            android:id="@+id/tv_creator_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/anonymous"
            android:textColor="@color/secondary_text"
            android:maxLength="12"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_create_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_time"
            android:textColor="@color/primary_text"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_address"
            android:textColor="@color/gray"
            android:textSize="12sp"/>
    </LinearLayout>
</RelativeLayout>