<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <com.cmtech.android.bledevice.view.RoundImageView
            android:id="@+id/iv_creator_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_user"/>

        <TextView
            android:id="@+id/tv_creator_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/anonymous"
            android:textSize="12sp"
            android:textColor="@color/secondary_text"
            android:maxLength="12"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_record_basic_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_create_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_time"
            android:textColor="@color/primary_text"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_address"
            android:textColor="@color/gray"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_note"/>
            <TextView
                android:id="@+id/tv_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/null_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLength="10"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_indicate"
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"/>

    <ImageView
        android:id="@+id/iv_need_upload"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="6dp"
        android:src="@mipmap/ic_upload_24px"/>

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="6dp"
        android:src="@mipmap/ic_delete_24px"/>

</LinearLayout>