<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_set_account_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        toolbar:title="@string/modify_account_info"
        toolbar:navigationIcon="@mipmap/ic_left_arrow_32px"
        android:theme="@style/ThemeOverlay.AppCompat.Light"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/normal_font"
            android:text="手机号："/>

        <EditText
            android:id="@+id/et_account_user_name"
            style="@style/edittext_circle_gray_no_focusable_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:maxLength="15"/>

        <Button
            android:id="@+id/btn_change_account"
            style="@style/button_circle_blue_style"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:text="切换账号"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_vertical">
        <TextView
            android:labelFor="@id/et_account_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/normal_font"
            android:text="@string/account_name"/>

        <EditText
            android:id="@+id/et_account_name"
            style="@style/edittext_circle_gray_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:maxLength="10"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="*昵称会显示在您输出的记录报告中。"
        android:textSize="@dimen/smallest_font"
        android:textColor="@color/red"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/normal_font"
            android:text="@string/account_portrait"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <com.cmtech.android.bledeviceapp.view.RoundImageView
                android:id="@+id/iv_account_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_user"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">
        <TextView
            android:labelFor="@id/et_account_note"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:textSize="@dimen/normal_font"
            android:text="@string/note"/>
        <EditText
            android:id="@+id/et_account_note"
            style="@style/edittext_circle_gray_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:inputType="textMultiLine"
            android:maxLength="50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <Button
            android:id="@+id/btn_userinfo_cancel"
            style="@style/button_circle_blue_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="@dimen/normal_font"/>

        <Button
            android:id="@+id/btn_account_info_ok"
            style="@style/button_circle_blue_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="@dimen/normal_font"/>
    </LinearLayout>
</LinearLayout>