<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_hr"
                android:textSize="@dimen/smallest_font"/>

            <EditText
                android:id="@+id/et_hr_max_value"
                style="@style/edittext_circle_gray_no_focusable_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ellipsis"
                android:textSize="@dimen/big_font"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BPM"
                android:textSize="@dimen/smallest_font"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/ib_record_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_start_32px"
                android:background="@color/background_transparent"/>

            <TextView
                android:id="@+id/tv_record_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开始记录"
                android:textSize="@dimen/smallest_font"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_hr"
                android:textSize="@dimen/smallest_font"/>

            <EditText
                android:id="@+id/et_hr_ave_value"
                style="@style/edittext_circle_gray_no_focusable_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ellipsis"
                android:textSize="@dimen/big_font"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BPM"
                android:textSize="@dimen/smallest_font"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/divider_line"/>

    <include layout="@layout/layout_line_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>